--- a/{{cookiecutter.django_name}}/.github/workflows/ci.yml
+++ b/{{cookiecutter.django_name}}/.github/workflows/ci.yml
@@ -20,18 +20,13 @@ jobs:
           - 5432:5432
         # needed because the postgres container does not provide a healthcheck
         options: --health-cmd pg_isready --health-interval 10s --health-timeout 5s --health-retries 5
-
-    strategy:
-      max-parallel: 4
-      matrix:
-        python-version: [3.9]
     
     steps:
     - uses: actions/checkout@v2
-    - name: Set up Python ${{ matrix.python-version }}
+    - name: Set up Python 3.9
       uses: actions/setup-python@v2
       with:
-        python-version: ${{ matrix.python-version }}
+        python-version: 3.9
     - name: psycopg2 prerequisites
       run: sudo apt-get install libpq-dev
     - name: Install Dependencies
